Week4_Python/mySQLconnectionErrors.txt
sqlalchemy.exc.OperationalError
sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (2003, "Can't connect to MySQL server on '127.0.0.1' (10061)") (Background on this error at: http://sqlalche.me/e/e3q8)
BEFORE: 
'port': '3305'
AFTER:
'port': '3306'
SOLUTION: make sure correct port is listed in config dictionary

 * Restarting with stat
Traceback (most recent call last):
  File "server.py", line 2, in <module>
    from mysqlconnection import MySQLConnector
  File "C:\Users\rnkee\OneDrive\Dojo\Week4_Python\SQL__Flask\friends\mysqlconnection.py", line 5
    class MySQLConnection(object)
                                ^
SyntaxError: invalid syntax

BEFORE: 
class MySQLConnection(object)
AFTER:
class MySQLConnection(object):
REASON: class declaration requires ending colon


sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'root'@'localhost' (using password: NO)") (Background on this error at: http://sqlalche.me/e/e3q8)
BEFORE:
'password': ''
AFTER:
'password': 'test1234'
REASON: No password was entered

sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'root'@'localhost' (using password: YES)") (Background on this error at: http://sqlalche.me/e/e3q8)
BEFORE:
'password': 'test1234!'
AFTER:
'password': 'test1234'
REASON: Wrong password was entered

